force-app/main/default/objects/PSA_Announcements__c/PSA_Announcements__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>PSA Announcements</label>
</CustomObject>