force-app/main/default/objects/PSA_Announcements__c/fields/General_Announcements__c.field-meta.xml
<CustomField>
    <fullName>General_Announcements__c</fullName>
    <label>General Announcements</label>
    <type>TextArea</type>
</CustomField>