force-app/main/default/objects/PSA_Announcements__c/fields/Missing_Time__c.field-meta.xml
<CustomField>
    <fullName>Missing_Time__c</fullName>
    <label>Missing Time</label>
    <type>TextArea</type>
</CustomField>