force-app/main/default/objects/PSA_Announcements__c/fields/Unapproved_Time__c.field-meta.xml
<CustomField>
    <fullName>Unapproved_Time__c</fullName>
    <label>Unapproved Time</label>
    <type>TextArea</type>
</CustomField>